[GH-92] Add configuration of new entity IRI generator, allow changing it.
Make Rdf4JNewEntityGenerator session-scoped to remember the config.